--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.8",
+    "inflection": "^1.12.0",
     "mongoose": "^5.9.7"
   }
 }
