--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.4",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "swiper": "^5.3.6",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.0",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
