--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "dayjs": "^1.8.26",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "swiper": "^5.3.6",
